@@ -87,10 +87,12 @@ class DistroFunction(commands.CobblerFunction):
                 print x.name
             return True
 
-        obj = self.object_manipulator_start(self.api.new_distro,self.api.distros)
+        obj = self.object_manipulator_start("distro")
+
         if obj is None:
             return True
-
+        
+        # FIXME: remotify
         if not "dumpvars" in self.args:
             if self.options.comment is not None:
                 obj.set_comment(self.options.comment)
@@ -119,7 +121,7 @@ class DistroFunction(commands.CobblerFunction):
             if self.options.redhat_management_key is not None:
                 obj.set_redhat_management_key(self.options.redhat_management_key)
 
-        return self.object_manipulator_finish(obj, self.api.distros, self.options)
+        return self.object_manipulator_finish(obj, "distro", self.options)
 
 
 
@@ -132,9 +134,9 @@ def register():
     """
     return "cli"
 
-def cli_functions(api):
+def cli_functions(api, remote, token):
     return [
-       DistroFunction(api)
+       DistroFunction(api, remote, token)
     ]
 
 
