@@ -132,10 +132,9 @@ def register():
     """
     return "cli"
 
-def cli_functions(api):
+def cli_functions(api, remote, token):
     return [
-       RepoFunction(api)
+       RepoFunction(api, remote, token)
     ]
-    return []
 
 
