@@ -263,9 +263,9 @@ def register():
     """
     return "cli"
 
-def cli_functions(api):
+def cli_functions(api, remote, token):
     return [
-       SystemFunction(api)
+       SystemFunction(api, remote, token)
     ]
 
 
